1.1
        - when using the helper, close the pty fd also in the main process.

1.0  Tue Oct  3 13:18:00 CEST 2006
	- do not call chmod/chown with 0 argument when pty never opened.
        - reformatted ptytty.C to hopefully be more clear.

0.2  Thu Jul 20 04:57:26 CEST 2006
	- move include files outside #ifdef PTYTTY_HELPER in proxy.C.
        - added proxy.C to cvs (was missing before).

0.1  Wed Jan 25 22:56:36 CET 2006
	- added the C API.
        - small freebsd patch to fdpass.C by Thierry Thomas.
        - added eg/c-sample.c.
        - small fixes to the C api.
        - restructured source files.
        - added set*uid checks to ptytty.m4.

0.0
        - originally cloned from rxvt-unicode.
